src/objects/RTR_LAE_Staging_Data__c.object
<CustomObject>
    <fields>
        <fullName>APTS_AssetProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Line_Item_Number__c</fullName>
        <formula>VALUE(APTS_Asset_Line_Item__r.APTS_Asset_Line_Item_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Line Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipName>Apttus_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Condition1__c</fullName>
        <formula>&quot;GROSS&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Condition 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Condition2__c</fullName>
        <formula>&quot;NET&quot;</formula>
        <label>Billing Condition 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Business_Transaction_Type__c</fullName>
        <label>Business Transaction Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Company_Code__c</fullName>
        <description>This field will hold Asset associated Account Company Code.</description>
        <label>Company Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Company_Codeold__c</fullName>
        <formula>TEXT( APTS_Asset_Line_Item__r.Apttus_Config2__AccountId__r.Mini_Company_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Description__c</fullName>
        <formula>APTS_Asset_Line_Item__r.Apttus_Config2__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Effective_Date__c</fullName>
        <description>This field will capture Asset Contract Effective Date. 

05/08/2019 &lt;Mahesh Chilaka&gt; This formula field now moved to static field.</description>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Effective_Date_old__c</fullName>
        <formula>IF(OR(APTS_Business_Transaction_Type__c == &apos;0001&apos;, APTS_Business_Transaction_Type__c == &apos;B005&apos;), APTS_Asset_Line_Item__r.Apttus_Config2__OriginalStartDate__c, 
IF(OR(APTS_Business_Transaction_Type__c == &apos;0002&apos;, APTS_Business_Transaction_Type__c == &apos;A005&apos;), APTS_Asset_Line_Item__r.Apttus_Config2__EndDate__c , 
IF(APTS_Business_Transaction_Type__c == &apos;0003&apos;, APTS_Asset_Line_Item__r.Apttus_Config2__StartDate__c, 
IF(APTS_Business_Transaction_Type__c == &apos;0004&apos;, APTS_Asset_Line_Item__r.APTS_Amendment_Effective_Date__c, NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_End_Date__c</fullName>
        <description>This field will capture Asset Contract End Date.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_End_Date_old__c</fullName>
        <formula>APTS_Asset_Line_Item__r.Apttus_Config2__EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number__c</fullName>
        <description>This field will hold Asset associated Agreement Contract Number.</description>
        <label>Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number_old__c</fullName>
        <formula>VALUE(APTS_Asset_Line_Item__r.Apttus_CMConfig__AgreementId__r.Apttus__Agreement_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Start_Date__c</fullName>
        <description>This field will capture Asset Contract Start Date</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Start_Date_old__c</fullName>
        <formula>IF(ISBLANK( APTS_Migration_Date__c), APTS_Asset_Line_Item__r.Apttus_Config2__BillingStartDate__c, APTS_Asset_Line_Item__r.Apttus_Config2__StartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contractual_Purchase__c</fullName>
        <label>Contractual Purchase</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Currency_Code__c</fullName>
        <formula>TEXT(APTS_Asset_Line_Item__r.Apttus_Config2__PriceListId__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer__c</fullName>
        <description>This field will hold Asset associated Account SAP Customer ID.</description>
        <label>Customer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_old1__c</fullName>
        <formula>APTS_Asset_Line_Item__r.Apttus_Config2__AccountId__r.SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <formula>TEXT(APTS_Asset_Line_Item__r.Apttus_Config2__AccountId__r.Distribution_Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Due_Date__c</fullName>
        <description>This field will hold Asset Billing Start Date.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Due_Date_old__c</fullName>
        <formula>IF(ISBLANK( APTS_Migration_Date__c), APTS_Asset_Line_Item__r.Apttus_Config2__BillingStartDate__c, APTS_Asset_Line_Item__r.Apttus_Config2__StartDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <description>This field will hold Asset End Date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date_old__c</fullName>
        <formula>IF(
	NOT(ISBLANK(APTS_Migration_Date__c)), 
	APTS_Asset_Line_Item__r.Apttus_Config2__EndDate__c,
IF( APTS_Business_Transaction_Type__c == &apos;0002&apos;, APTS_Asset_Line_Item__r.Apttus_Config2__EndDate__c, 
APTS_Asset_Line_Item__r.Apttus_Config2__EndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Free_On_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free On Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Amount__c</fullName>
        <description>This field will hold Asset Gross Amount</description>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Gross_Amount_old__c</fullName>
        <formula>IF(
	AND(NOT(ISNULL(APTS_Migration_Date__c)), 
APTS_Business_Transaction_Type__c = &apos;0001&apos; 
),
	IF( 
		ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &apos;Service Fee&apos;), 
		APTS_Asset_Line_Item__r.APTS_Calculated_List_Price__c + APTS_Asset_Line_Item__r.APTS_Service_Rollup_Gross_Amount__c, 
		APTS_Asset_Line_Item__r.APTS_Calculated_List_Price__c - APTS_Asset_Line_Item__r.APTS_Delivery_Gross_Amount_Rollup__c 
	),
	IF(
		ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &apos;Service Fee&apos;), 
		APTS_Asset_Line_Item__r.APTS_Calculated_Base_Extended_Price__c + APTS_Asset_Line_Item__r.APTS_Service_Rollup_Gross_Amount__c, 
		APTS_Asset_Line_Item__r.APTS_Calculated_Base_Extended_Price__c - APTS_Asset_Line_Item__r.APTS_Delivery_Gross_Amount_Rollup__c
	)
)
* CURRENCYRATE(APTS_Currency_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Grouping_Key__c</fullName>
        <description>This field is used for batch to group bundle items</description>
        <label>Grouping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Integration_Log_Id__c</fullName>
        <label>Integration Log Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Mass_Interfacing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check marks the staging record to be interfaced in a massive process</description>
        <label>Mass Interfacing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Migration_Date__c</fullName>
        <formula>APTS_Asset_Line_Item__r.APTS_MigrationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_NetPrice_Amount__c</fullName>
        <description>This field will hold Asset Net Price Amount.</description>
        <label>Net Price Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_NetPrice_Amount_old__c</fullName>
        <formula>IF( 
	AND( 
		NOT(ISNULL(APTS_Migration_Date__c)), 
		APTS_Business_Transaction_Type__c = &apos;0001&apos; 
	), 
	IF( 
		ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &apos;Service Fee&apos;), 
		APTS_Asset_Line_Item__r.Apttus_Config2__NetPrice__c + APTS_Asset_Line_Item__r.APTS_Service_Rollup_Net_Amount__c, 
		APTS_Asset_Line_Item__r.Apttus_Config2__NetPrice__c - APTS_Asset_Line_Item__r.APTS_Delivery_Net_Amount_Rollup__c 
	),
	IF( 
		ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &apos;Service Fee&apos;), 
		APTS_Asset_Line_Item__r.APTS_Consolidated_Price__c + APTS_Asset_Line_Item__r.APTS_Service_Rollup_Net_Amount__c, 
		APTS_Asset_Line_Item__r.APTS_Consolidated_Price__c - APTS_Asset_Line_Item__r.APTS_Delivery_Net_Amount_Rollup__c 
	) 
)
* CURRENCYRATE(APTS_Currency_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_New_Asset_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipName>Apttus_Integration_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_New_Contract_Number__c</fullName>
        <formula>VALUE(APTS_New_Asset_Line_Item__r.Apttus_CMConfig__AgreementId__r.Apttus__Agreement_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Contract Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Notification_Id__c</fullName>
        <label>Notification Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Lease__c</fullName>
        <formula>IF( APTS_Asset_Line_Item__r.Apttus_CMConfig__AgreementId__r.RecordType.DeveloperName == &apos;Consumption&apos;, &apos;X&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operational Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Physical_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship field with physical asset object</description>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>RTR-LAE Staging Data</relationshipLabel>
        <relationshipName>APTS_RTR_LAE_Staging_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <formula>CASE(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &quot;Service Fee&quot;, &quot;SE&quot;, &quot;Sales Price&quot;, &quot;MA&quot;, &quot;Rental Fee&quot;, &quot;MA&quot;, &quot;Usage Fee&quot;, &quot;MA&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <formula>APTS_Asset_Line_Item__r.Apttus_Config2__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Remaining_Useful_Life__c</fullName>
        <description>Remaining Useful Life</description>
        <label>Remaining Useful Life</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Order_Item__c</fullName>
        <formula>IF( 
	NOT(ISBLANK(APTS_Asset_Line_Item__r.APTS_MigrationDate__c)),
	NULL,
	VALUE(APTS_Asset_Line_Item__r.APTS_Installation_Sales_Order_Item__c)
)</formula>
        <label>Sales Order Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Order_Number__c</fullName>
        <formula>IF( 
	NOT(ISBLANK(APTS_Asset_Line_Item__r.APTS_MigrationDate__c)),
	NULL,	
	APTS_Asset_Line_Item__r.APTS_Installation_Sales_Order_Id__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org__c</fullName>
        <formula>TEXT(APTS_Asset_Line_Item__r.Apttus_Config2__AccountId__r.Sales_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesforceObjectId__c</fullName>
        <label>SalesforceObjectId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sender_Business_System_Id__c</fullName>
        <defaultValue>&quot;APTTUS&quot;</defaultValue>
        <label>Sender Business System Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number__c</fullName>
        <formula>APTS_Physical_Asset__r.APTS_FinanceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <description>This field will hold Asset Original Start Date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date_old__c</fullName>
        <formula>APTS_Asset_Line_Item__r.Apttus_Config2__OriginalStartDate__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Timestamp_Text__c</fullName>
        <description>Timestamp formatted to remove miliseconds</description>
        <formula>TEXT( APTS_Timestamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Timestamp__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Of_Ownership__c</fullName>
        <formula>IF(ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__AttributeValueId__r.APTS_Type_of_contract__c, &apos;RentBuy&apos;), &apos;X&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Of Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Unique_Serial_Number__c</fullName>
        <formula>APTS_Physical_Asset__r.UniqueNumber__c</formula>
        <label>Unique Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Used_Product__c</fullName>
        <formula>IF(
		AND(
			ISPICKVAL(APTS_Asset_Line_Item__r.Apttus_Config2__ChargeType__c, &quot;Rental Fee&quot;),
			NOT(ISNULL(APTS_Migration_Date__c))
			),
		IF(
			(APTS_Asset_Line_Item__r.Apttus_Config2__StartDate__c - APTS_Asset_Line_Item__r.APTS_Physical_Asset__r.InitialActivationDate__c) &gt; 30,
			true,
			false
		 ),
		 
		APTS_Physical_Asset__r.RefurbishedMachine__c
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Used Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_isFinancialStartDateUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked to true when B005 Start Date value is update on Assets.</description>
        <label>isFinancialStartDateUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>RTR-LAE Staging Data</label>
    <listViews>
        <fullName>ABqfkckGlkJTnHAc2CIepoILHonhD6pS</fullName>
        <columns>NAME</columns>
        <columns>APTS_Asset_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Grouping_Key__c</field>
            <operation>equals</operation>
            <value>ABqfkckGlkJTnHAc2CIepoILHonhD6pS</value>
        </filters>
        <label>ABqfkckGlkJTnHAc2CIepoILHonhD6pS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Asset_Line_Item__c</columns>
        <columns>APTS_Asset_Line_Item_Number__c</columns>
        <columns>APTS_Grouping_Key__c</columns>
        <columns>APTS_Product_Family__c</columns>
        <columns>APTS_Remaining_Useful_Life__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Migration_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Shravan_Migrated</fullName>
        <columns>NAME</columns>
        <columns>APTS_Asset_Line_Item__c</columns>
        <columns>APTS_Asset_Line_Item_Number__c</columns>
        <columns>APTS_Remaining_Useful_Life__c</columns>
        <columns>APTS_Product_Family__c</columns>
        <columns>APTS_Grouping_Key__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Grouping_Key__c</field>
            <operation>equals</operation>
            <value>lZcC473mV7JrpImal4M309CJBrEPouAF</value>
        </filters>
        <label>Shravan Migrated</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AIL-{00000000}</displayFormat>
        <label>RTR-LAE Staging Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTR-LAE Staging Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>